# brazilian-ecommerce-spark-elt

./: README.md  pyproject.toml
brazilian-ecommerce/: pyproject.toml
src/notebooks/: elt.ipynb
storage/raw/: olist_order_items_dataset_2.csv
