[project]
name = "brazilian-ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Bossardi",email = "contato@gabrielbossardi.com.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "brazilian_ecommerce", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
